<resources>
    <string name="app_name">AAD</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="submit">Submit</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="project">Project on GITHUB (link)</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="submission_failure">Submission not successful</string>
    <string name="submission_success">Submission Successful</string>

    <string name="learning_hours">%s1 Learning Hours, %s2</string>
    <string name="skill_hours">%s1 Skill IQ Score, %s2</string>
</resources>